
2004-10-28  MenTaLguY  <mental@rydia.net>

	* src/util/list.h: cleanups of list class.  I think, aside from
	  documentation and maybe fixes for g++ 3.4 (if required), this
	  is the last set of changes I will need to make.

	* src/sp-item.cpp, src/splivarot.cpp, src/util/reverse-list.h,
	  src/util/filter-list.h, src/util/map-list.h:
	  adjust for changes in the list class' interface

	* src/desktop.cpp, src/sp-desktop-widget.h: removed old layer selector

	* src/widgets/layer-selector.cpp, src/widgets/layer-selector.h:
	  more work; it's now at least as functional as the old selector it
	  replaces
	  
2004-10-27  Kees Cook  <kees@outflux.net>

	* src/libnr/nr-point.h: use NR::X and NR::Y instead of "0" and "1".
	* src/dialogs/export.cpp: stack/register weirdness requires a function
	  call to get true == comparison of NR::Rect's.  Closes bug #1048614.
	* src/dialogs/align.cpp: saving erased iterator.  Closes bug #1054270.
	* share/extensions/ill2svg.pl: added strict, warnings, and detection
	  of Image::Magick module.  Closes bug #990659.
	* src/dialogs/find.h, src/dialogs/find.cpp: removed unfinished new
	  find dialog instantiation.  Closes bug #1048802.

2004-10-27  Carl Hetherington  <inkscape@carlh.net>

	* src/extension/output.cpp: better fix for 1004134 after advice
	from Ted.

2004-10-26  Carl Hetherington  <inkscape@carlh.net>

	* src/extension/output.cpp: don't reset modified flag until after
	save has happened, in case it fails.  Fixes 1004134.

	* src/livarot/ShapeSweep.cpp: fix a typo in my cleanups.  Fixes
	1048151.

2004-10-25  Bryce Harringotn <bryce@bryceharrington.org>

	* file.cpp, file.h, dialogs/export.cpp: Adding error return logic
	  for png export code so that failure to write can be tracked.
	  Adding an error dialog for when this occurs.  Fixes bug 1038932. 

	* extension/system.cpp:  Changing sp_ui_error_dialog to g_warning
 	  so won't crash when running from commandline.  Fixes bug
	  1000350. 
